--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts/usercheck.js"></script>
+    <script src="../static/scripts/usercheck.js"></script>
     <title>Index</title>
 </head>
 <body>
