--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,16 @@
             window.location.replace("index.html")
         }
     </script>
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/login.css">
-    <script src="scripts/login.js"></script>
+    <link rel="stylesheet" href="../static/styles/base.css">
+    <link rel="stylesheet" href="../static/styles/login.css">
+    <script src="../static/scripts/login.js"></script>
     <title>Login</title>
 </head>
 <body>
     <div id="laro-title">LARO</div>
     <div class="fade-overlay"></div>
     <div class="container" id="container">
+        <div id="error-msg"></div>
         <form id="login-form" action="">
             <input type="email" name="email" id="email" placeholder="Email" required>
             
@@ -23,17 +24,14 @@
             <div id="show-password-container">
                 <button type="button" id="show-password-btn">Show Password</button>
             </div>
-            
-            
-
             <button type="submit">LOGIN</button>
         </form>
         <a href="" id="forgot-password">forgot password?</a>
         <div>Log-in via: </div>
         <div id="external-icons">
-            <a href=""><img src="img/facebook.png" alt=""></a>
-            <a href=""><img src="img/google.png" alt=""></a>
-            <a href=""><img src="img/discord.png" alt=""></a>
+            <a href=""><img src="../static/img/facebook.png" alt=""></a>
+            <a href=""><img src="../static/img/google.png" alt=""></a>
+            <a href=""><img src="../static/img/discord.png" alt=""></a>
         </div>
     </div>
     <button id="switch-form">Register Here</button>
