--- a/templates/UI/quikjoin/quickjoin.css
+++ b/templates/UI/quikjoin/quickjoin.css
@@ -7,7 +7,7 @@ body {
   .header-bar {
     background-color: #FFD234;
     color: black;
-    padding: 12px 100;
+    padding: 12px 100px;
     font-size: 1.4rem;
     font-weight: bold;
     display: flex;
