--- a/laro_hub/BACKEND/LARO/templates/login.html
+++ b/laro_hub/BACKEND/LARO/templates/login.html
@@ -1,10 +1,13 @@
+
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/base.css">
-    <link rel="stylesheet" href="../static/styles/login.css">
-    <script src="../static/scripts/login.js"></script>
+    <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+    <script src="{% static 'scripts/login.js' %}" defer></script>
     <title>Login</title>
 </head>
 <body>
@@ -12,9 +15,9 @@
     <div class="fade-overlay"></div>
     <div class="container" id="container">
         <div id="error-msg"></div>
-        <form id="login-form" action="">
+        <form id="login-form" action="{% url 'api:login' %}" method="POST">
+            {% csrf_token %}
             <input type="email" name="email" id="email" placeholder="Email" required>
-            
             <input type="password" name="password" id="password" placeholder="Password" required>
             <div id="show-password-container">
                 <button type="button" id="show-password-btn">Show Password</button>
@@ -24,9 +27,9 @@
         <a href="" id="forgot-password">forgot password?</a>
         <div>Log-in via: </div>
         <div id="external-icons">
-            <a href=""><img src="../static/img/facebook.png" alt=""></a>
-            <a href=""><img src="../static/img/google.png" alt=""></a>
-            <a href=""><img src="../static/img/discord.png" alt=""></a>
+            <a href=""><img src="{% static 'img/facebook.png' %}" alt=""></a>
+            <a href=""><img src="{% static 'img/google.png' %}" alt=""></a>
+            <a href=""><img src="{% static 'img/discord.png' %}" alt=""></a>
         </div>
     </div>
     <button id="switch-form">Register Here</button>
