--- a/templates/UI/editprofile.html
+++ b/templates/UI/editprofile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edit My Profile</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -15,29 +15,22 @@
 <body>
     <div class="containerProfile">
         <i class="bi bi-arrow-left"></i>
-        <h3>PROFILE</h3>
+        <h3>EDIT MY PROFILE</h3>
     </div>
 
     <div class="containerUser">
         <img src="Jhonny.jpg" alt="Description of the image">
 
             <div class="userDetails">
-                <h4>Jhonny Mahinay</h4>
-                <p>"Jhonny is my name, Basketball is my game"</p>
+                <h4 contenteditable="true">Jhonny Mahinay</h4>
+                <p contenteditable="true">"Jhonny is my name, Basketball is my game"</p>
 
-                <div class="widgetsUser">
+                
+            </div>
+                <div class="editprofile">
                     <div class="iconFollow">
-                        <h5>FOLLOW</h5>
+                        <span>SAVE CHANGES</span>
                     </div>
-                        
-                    <div class="iconMessage">
-                        <i class="chat-icon fas fa-comment"></i>
-                    </div>
-        
-                    <div class="iconShare">
-                        <i class="fas fa-share-from-square"></i>
-                    </div>
-                </div>
             </div>
     </div>
 
@@ -68,21 +61,20 @@
                 <div class="age">
                     <p>AGE</p>
                     <hr>
-                    <p>36</p>
+                    <p contenteditable="true">36</p><i class="fa-solid fa-pen" style="color: #FFD43B;"></i>
                 </div>
 
                 <div class="weight">
                     <p>WEIGHT</p>
                     <hr>
-                    <p>45</p>
+                    <p contenteditable="true">45</p><i class="fa-solid fa-pen" style="color: #FFD43B;"></i>
                 </div>
 
                 <div class="height">
                     <p>HEIGHT</p>
                     <hr>
-                    <p>5'11</p>
+                    <p contenteditable="true">5'11</p><i class="fa-solid fa-pen" style="color: #FFD43B;"></i>
                 </div>
-
             </div>
 
         </div>
@@ -91,19 +83,38 @@
 
     <div class="userHistory">
         <h4>HISTORY</h4>
-        <div class="containerHistory" id="containerHistory">
-          <div class="mostRecent">
-            <p>MOST RECENT</p>
-            <i class="fas fa-angle-up"></i>
-          </div>
-      
-          <div class="highligthHistory"></div>
-      
-          <!-- Initial items to be replaced -->
-          <!-- They will be generated dynamically -->
+        <div class="containerHistory">
+            <div class="mostRecent">
+                <p>MOST RECENT</p>
+                <i class="fas fa-angle-up"></i>
+            </div>
+            
+            <div class="highligthHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
         </div>
-      </div>
+    </div>
     
-    <script src="history.js"></script>
 </body>
 </html>
