--- a/templates/UI/myprofile.html
+++ b/templates/UI/myprofile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Profile</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <div class="containerProfile">
         <i class="bi bi-arrow-left"></i>
-        <h3>PROFILE</h3>
+        <h3>MY PROFILE</h3>
     </div>
 
     <div class="containerUser">
@@ -25,19 +25,12 @@
                 <h4>Jhonny Mahinay</h4>
                 <p>"Jhonny is my name, Basketball is my game"</p>
 
-                <div class="widgetsUser">
+                
+            </div>
+                <div class="editprofile">
                     <div class="iconFollow">
-                        <h5>FOLLOW</h5>
+                        <span>EDIT PROFILE </span><i class="fa-solid fa-user"></i>
                     </div>
-                        
-                    <div class="iconMessage">
-                        <i class="chat-icon fas fa-comment"></i>
-                    </div>
-        
-                    <div class="iconShare">
-                        <i class="fas fa-share-from-square"></i>
-                    </div>
-                </div>
             </div>
     </div>
 
@@ -91,19 +84,38 @@
 
     <div class="userHistory">
         <h4>HISTORY</h4>
-        <div class="containerHistory" id="containerHistory">
-          <div class="mostRecent">
-            <p>MOST RECENT</p>
-            <i class="fas fa-angle-up"></i>
-          </div>
-      
-          <div class="highligthHistory"></div>
-      
-          <!-- Initial items to be replaced -->
-          <!-- They will be generated dynamically -->
+        <div class="containerHistory">
+            <div class="mostRecent">
+                <p>MOST RECENT</p>
+                <i class="fas fa-angle-up"></i>
+            </div>
+            
+            <div class="highligthHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
+            <div class="itemHistory">
+
+            </div>
+
         </div>
-      </div>
+    </div>
     
-    <script src="history.js"></script>
 </body>
 </html>
