--- a/templates/UI/quikjoin/quickjoin.html
+++ b/templates/UI/quikjoin/quickjoin.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="header-bar">
-    <i class="bi bi-arrow-left"></i> <span>QUICK JOIN</span>
+    <button class="check-court-btn"><i class="bi bi-arrow-left"></i> <span>QUICK JOIN</span></button>
   </div>
 
   <div class="section-label">FIND PLAYERS</div>
