Fix: Reverted Path Changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/styles/base.css">
-    <link rel="stylesheet" href="../../static/styles/dashboard.css">
-    <script src="../../static/scripts/usercheck.js"></script>
-    <script src="../../static/scripts/dashboard.js"></script>
+    <link rel="stylesheet" href="../static/styles/base.css">
+    <link rel="stylesheet" href="../static/styles/dashboard.css">
+    <script src="../static/scripts/usercheck.js"></script>
+    <script src="../static/scripts/dashboard.js"></script>
     <title>Dashboard</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
         <div class="navbar">
             <div id="title">Laro™</div>
             <div id="nav-icons">
-                <a href=""><img src="..\static/img/home.png" alt=""></a>
-                <a href=""><img src="..\static/img/bell.png" alt=""></a>
-                <a href=""><img src="..\static/img/profile.png" alt=""></a>
+                <a href=""><img src="../static/img/home.png" alt=""></a>
+                <a href=""><img src="../static/img/bell.png" alt=""></a>
+                <a href=""><img src="../static/img/profile.png" alt=""></a>
             </div>
         </div>
         <div id="sport-section">
@@ -24,7 +24,7 @@
                 <button>Change Sport</button>
             </div>
             <div class="row">
-                <img src="..\static/img/basketball.jpg" alt="">
+                <img src="../static/img/basketball.jpg" alt="">
             </div>
         </div>
         <div id="quick-join-section">
@@ -35,7 +35,7 @@
             <button>Your upcoming games</button>
         </div>
         <div id="nearby-courts-section">
-            <img src="..\..\..\..\static/img/palumco.jpg" alt="">
+            <img src="../static/img/palumco.jpg" alt="">
             <p id="location-name">Brgy. Palumco</p>
             <p>Nearby Courts</p>
         </div>
