--- a/templates/historyprofile.html
+++ b/templates/historyprofile.html
@@ -11,6 +11,7 @@
 
 
     <link rel="stylesheet" href="../static/styles/historyprofile.css">
+    <link rel="stylesheet" href="../static/styles/historyformat.css">
 </head>
 <body>
     <div class="containerProfile">
