--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <link rel="stylesheet" href="../static/styles/profile.css">
+    <link rel="stylesheet" href="../static/styles/historyformat.css">
 </head>
 <body>
     <div class="containerProfile">
@@ -95,8 +96,6 @@
             <p>MOST RECENT</p>
             <i class="fas fa-angle-up"></i>
           </div>
-      
-          <div class="highligthHistory"></div>
       
           <!-- Initial items to be replaced -->
           <!-- They will be generated dynamically -->
