Add: Invitation page, connected the nabigation between pages

--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -105,6 +105,11 @@ body {
     color: white;
 }
 
+#nearby-courts-section button{
+    background-color: #fada39;
+    font-family: AmericanCaptain;
+}
+
 #sport-section .row{
    display: flex;
    flex-direction: row;
