--- a/templates/quickjoin.html
+++ b/templates/quickjoin.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="header-bar">
-    <button class="check-court-btn"><i class="bi bi-arrow-left"></i> <span>QUICK JOIN</span></button>
+    <button class="check-court-btn" onclick="window.location.replace('dashboard.html')"><i class="bi bi-arrow-left"></i> <span>QUICK JOIN</span></button>
   </div>
 
   <div class="section-label">FIND PLAYERS</div>
