--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
             <div id="nav-icons">
                 <a href=""><img src="../static/img/home.png" alt=""></a>
                 <a href=""><img src="../static/img/bell.png" alt=""></a>
-                <a href=""><img src="../static/img/profile.png" alt=""></a>
+                <a href="myprofile.html"><img src="../static/img/profile.png" alt=""></a>
             </div>
         </div>
         <div id="sport-section">
@@ -29,7 +29,7 @@
         </div>
         <div id="quick-join-section">
             <p>Quick Join</p>
-            <button>Find Game</button>
+            <button onclick="window.location.replace('quickjoin.html')">Find Game</button>
         </div>
         <div id="upcoming-games-section">
             <button>Your upcoming games</button>
@@ -38,6 +38,7 @@
             <img src="../static/img/palumco.jpg" alt="">
             <p id="location-name">Brgy. Palumco</p>
             <p>Nearby Courts</p>
+            <button onclick="window.location.replace('invitation.html')">Invite</button>
         </div>
     </div>
 </body>
