--- a/templates/myprofile.html
+++ b/templates/myprofile.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="containerProfile">
-        <i class="bi bi-arrow-left"></i>
+        <button class="btn" onclick="window.location.replace('dashboard.html')"><i class="bi bi-arrow-left"></i></button>
         <h3>MY PROFILE</h3>
     </div>
 
