--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="containerProfile">
-        <i class="bi bi-arrow-left"></i>
+        <button class="btn" onclick="window.location.replace('dashboard.html')"><i class="bi bi-arrow-left"></i></button>
         <h3>PROFILE</h3>
     </div>
 
