Edit: Connected myprofile.html to the database

--- a/templates/myprofile.html
+++ b/templates/myprofile.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="../static/styles/profile.css">
     <link rel="stylesheet" href="../static/styles/historyformat.css">
+    <script src="../static/scripts/myprofile.js"></script>
 </head>
 <body>
     <div class="containerProfile">
@@ -25,8 +26,6 @@
             <div class="userDetails">
                 <h4>Jhonny Mahinay</h4>
                 <p>"Jhonny is my name, Basketball is my game"</p>
-
-                
             </div>
                 <div class="editprofile">
                     <div class="iconFollow">
