--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,30 +6,34 @@
     <link rel="stylesheet" href="../static/styles/base.css">
     <link rel="stylesheet" href="../static/styles/login.css">
     <script src="../static/scripts/login.js"></script>
-    <title>Login</title>
+    <title>Laro Login</title>
 </head>
 <body>
-    <div id="laro-title">LARO</div>
-    <div class="fade-overlay"></div>
-    <div class="container" id="container">
-        <div id="error-msg"></div>
-        <form id="login-form" action="">
-            <input type="email" name="email" id="email" placeholder="Email" required>
-            
-            <input type="password" name="password" id="password" placeholder="Password" required>
-            <div id="show-password-container">
-                <button type="button" id="show-password-btn">Show Password</button>
-            </div>
-            <button type="submit">LOGIN</button>
-        </form>
-        <a href="" id="forgot-password">forgot password?</a>
-        <div>Log-in via: </div>
-        <div id="external-icons">
-            <a href=""><img src="../static/img/facebook.png" alt=""></a>
-            <a href=""><img src="../static/img/google.png" alt=""></a>
-            <a href=""><img src="../static/img/discord.png" alt=""></a>
+    <div class="background-text">LARO</div>
+    <div class="background-text2">LARO</div>
+    <div class="container">
+        <div class="form-container">
+            <h1>WELCOME!</h1>
+            <form id="login-form">
+                <input type="email" id="email" name="email" placeholder="EMAIL" required>
+
+                <input type="password" id="password" name="password" placeholder="PASSWORD" required>
+                <p class="forgot-password"><a href="#">forgot password?</a></p>
+                <p class="or-text"> ━━━━━━━or━━━━━━━</p>
+                <button type="button" class="google-login">
+                    Login with Google
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48" style="vertical-align: middle; margin-left: 8px;">
+                        <path fill="#4285F4" d="M24 9.5c3.54 0 6.7 1.22 9.17 3.22l6.85-6.85C34.6 2.7 29.6 0 24 0 14.8 0 6.9 5.4 3.3 13.3l7.98 6.2C13.7 14.1 18.3 9.5 24 9.5z"/>
+                        <path fill="#34A853" d="M46.5 24c0-1.6-.15-3.1-.43-4.6H24v9h12.7c-.55 3-2.2 5.5-4.7 7.2l7.2 5.6c4.2-3.9 6.6-9.6 6.6-16.2z"/>
+                        <path fill="#FBBC05" d="M10.3 28.5c-.5-1.5-.8-3.1-.8-4.7s.3-3.2.8-4.7l-7.98-6.2C.8 18.3 0 21 0 24s.8 5.7 2.3 8.9l7.98-6.2z"/>
+                        <path fill="#EA4335" d="M24 48c6.5 0 12-2.1 16-5.7l-7.2-5.6c-2 1.3-4.5 2-7 2-5.7 0-10.3-4.6-10.3-10.3 0-1.7.5-3.3 1.3-4.7l-7.98-6.2C6.9 33.6 14.8 39 24 39z"/>
+                    </svg>
+                </button>
+                <button type="submit" >LOG-IN</button>
+
+                <p class="signup-text">Don't have an Account? <a href="#">Sign-Up</a></p>
+            </form>
         </div>
     </div>
-    <button id="switch-form">Register Here</button>
 </body>
 </html>
