--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,20 +17,20 @@
         <ul class="nav-links">
             <li><a href="#">BOOKING</a></li>
             <li><a href="#">NOTIFICATIONS</a></li>
-            <li><a href="#">PROFILE</a></li>
+            <li><a href="myprofile.html">PROFILE</a></li>
         </ul>
     </nav>
 
     <!-- Main Content -->
     <div class="dashboard">
         <div class="left-panel">
-            <button class="btn nearby-courts">Nearby Courts</button>
+            <button class="btn nearby-courts" onclick="window.location.href='nearby-courts.html'">Nearby Courts</button>
         </div>
         <div class="right-panel">
-            <button class="btn quick-join">Quick Join</button>
-            <button class="btn upcoming-game">Upcoming Game<br><span>MARCH 25</span></button>
-            <button class="btn invite">Invite</button>
-            <button class="btn change-sport">Change Sport</button>
+            <button class="btn quick-join" onclick="window.location.href='quick-join.html'">Quick Join</button>
+            <button class="btn upcoming-game" onclick="window.location.href='upcoming-games.html'">Upcoming Game<br><span>MARCH 25</span></button>
+            <button class="btn invite" onclick="window.location.href='invite.html'">Invite</button>
+            <button class="btn change-sport" onclick="window.location.href='change-sport.html'">Change Sport</button>
         </div>
     </div>
 </body>
