--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,9 @@
     <!-- Navigation Bar -->
     <div class="background-text2">LARO</div>
     <nav class="navbar">
-        <div class="logo">LARO</div>
+        <div class="logo">
+            <a href="index.html">LARO</a>
+        </div>
         <div class="search-bar">
             <input type="text" placeholder="Search Laro">
         </div>
