--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
         <ul class="nav-links">
             <li><a href="booking.html">BOOKING</a></li>
             <li><a href="notifications.html">NOTIFICATIONS</a></li>
-            <li><a href="myprofile.html">PROFILE</a></li>
+            <li><a href="profile.html">PROFILE</a></li>
         </ul>
     </nav>
 
